--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-body {
+body {font-family:Sofia;
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -26,7 +26,7 @@ body {
   padding: 20px;
 }
 #form-head h1,
-h3 {
+h3 {font-size: 1.9em;
   color: rgb(15, 236, 229);
   padding: 5px;
   margin: 5px;
@@ -40,12 +40,17 @@ h3 {
 }
 form {
   padding: 25px;
-  width: 60%;
+  max-width: 60%;
   border-radius: 8px;
   background-color: rgba(193, 251, 2, 0.531);
   font-size: 18px;
   font-family: Segoe UI, Tahoma, Geneva, "Verdana", sans-serif;
+}@media screen and (max-width: 800px) {
+  form {
+    max-width: 100%;
+  }
 }
+
 
 .input-area {
   box-sizing: border-box;
